# mlb_dfs

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  METHODOLOGY.md  Procfile  README.md  fly.public.toml  fly.toml  pyproject.toml  render.yaml
backups/: 2026-04-30.pre-deploy-2.json  2026-04-30.pre-deploy-3.json  2026-04-30.pre-deploy.json
data/: deadline_candidates.json  prospect_rankings.json
data/dk_salaries/: 2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-11.json  2026-07-12.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json
data/historic/: picks.json
data/xwoba_daily/: 2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  (+73 more)
docs/: launch_kit.md
mlb_dfs/: cli.py  deadline.py  disk_cache.py  draft.py  dynasty.py  fantrax.py  farm.py  historic.py  injuries.py  k_props.py  live.py  mlb_api.py  notify.py  odds_api.py  projections.py  records.py  rolling_xwoba.py  savant.py  scoring.py  stuff.py  stuff_live.py  trivia.py  umpires.py  weather.py  web.py
scripts/: build_rows.py  build_rows_local.py  create_planned_drafts.py  daily_health.sh  dk_benchmark.py  dk_snapshot.py  factor_ab_inversion.py  fantrax_unowned.py  import_historic.py  merge_chunks.py  ml_backtest.py  ml_backtest_fast.py  refresh_stuff_live.py  validate_new_factors.py  weekly_audit.sh
tests/: test_draft.py  test_draft_simulation.py  test_live.py  test_scoring.py
(+36 files in other folders)
